--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -1,197 +1,179 @@
 {
   "item.boss_tools.fuel_bucket": "연료 양동이",
-  "block.boss_tools.oxygen_bullet_generator": "산소탄 생성기",
-  "block.boss_tools.block_of_blue_iron_plating": "청금 철 판 블록",
   "item.boss_tools.star_crawler_spawn_egg": "Star Crawler 생성 알",
   "item.boss_tools.iron_engine": "철 엔진",
   "item.boss_tools.oxygen_tank": "산소 탱크",
   "item.boss_tools.steel_hoe": "강철 괭이",
-  "block.boss_tools.mercury_iron_ore": "수성 철 광석",
-  "fluid.boss_tools.fuel": "연료",
-  "entity.boss_tools.mogler": "Mogler",
-  "itemGroup.tab_flags": "Space-Bosstools: 깃발",
-  "entity.boss_tools.rover": "로버",
   "item.boss_tools.iron_plate": "철 판",
   "item.boss_tools.desh_plate": "데쉬 판",
   "item.boss_tools.space_station": "우주 정거장",
   "item.boss_tools.compressed_silicon": "압축 실리콘",
-  "key.boss_tools.lander_key_space": "착륙 키 : Space",
-  "item.boss_tools.rocket_tier_2": "로켓 생성 알",
-  "block.boss_tools.fuel": "연료",
-  "block.boss_tools.block_of_rusted_iron_pillar": "녹슨 철 기둥",
-  "itemGroup.tab_blocks": "Space-Bosstools: 블록",
-  "item.boss_tools.rocket": "로켓 생성 알",
-  "block.boss_tools.mars_silicon_ore": "화성 실리콘 광석",
   "item.boss_tools.ice_shard": "얼음 조각",
-  "item.boss_tools.mars": "Admin Feuerzeug",
-  "block.boss_tools.moon_brick_slab": "달 벽돌 반 블록",
-  "block.boss_tools.cracked_moon_brick_stairs": "금 간 달 벽돌 계단",
-  "block.boss_tools.flag_cyan": "청록색 깃발",
-  "block.boss_tools.flag_light_blue": "하늘색 깃발",
-  "job.boss_tools.job2": "어부",
-  "biome.boss_tools.infernal_venus_barrens_biome": "Infernal Venus Barrens",
-  "job.boss_tools.job1": "농부",
-  "job.boss_tools.job4": "화살 제조인",
-  "itemGroup.tab_normal": "Space-BossTools",
-  "job.boss_tools.job3": "양치기",
-  "job.boss_tools.job6": "지도 제작자",
-  "advancements.workbench_advancement.title": "NASA 작업대",
-  "job.boss_tools.job5": "사서",
-  "job.boss_tools.job8": "갑옷 제조인",
-  "job.boss_tools.job7": "성직자",
-  "block.boss_tools.flag_red": "빨간색 깃발",
-  "death.attack.oxygen": "%1$s은(는) 더 이상 숨 쉴 수 없다",
-  "block.boss_tools.block_of_iron_plating": "철 판 블록",
-  "job.boss_tools.job9": "무기 대장장이",
-  "item.boss_tools.venus": "금성 포탈 점화기",
-  "advancements.rocket_tier_2_advancement.title": "2 티어 로켓",
   "item.boss_tools.netherite_space_pants": "네더라이트 우주복 하의",
-  "advancements.rocket_advancement.descr": "§b1 티어 로켓을 제작하세요",
   "item.boss_tools.engine_casing": "엔진 케이싱",
-  "item.boss_tools.moon": "Admin Feuerzeug",
   "item.boss_tools.diamond_tank": "다이아몬드 탱크",
-  "block.boss_tools.cracked_moon_brick_slab": "금 간 달 벽돌 반 블록",
   "item.boss_tools.steel_shovel": "강철 삽",
   "item.boss_tools.golden_engine": "금 엔진",
-  "key.categories.spacebosstools": "Space-Bosstools",
-  "block.boss_tools.rocket_launch_pad": "로켓 발사대",
   "item.boss_tools.hammer": "망치",
-  "item.boss_tools.alien": "외계인 생성 알",
-  "block.boss_tools.coal_generator": "석탄 발전기",
-  "entity.boss_tools.pygro": "Pygro",
-  "item.boss_tools.orbit_overworld": "Admin Feuerzeug",
   "item.boss_tools.netherite_space_boots": "네더라이트 우주복 부츠",
-  "biome.boss_tools.venus_biome": "금성",
-  "fluid.fuel": "연료",
   "item.boss_tools.steel_pickaxe": "강철 곡괭이",
-  "block.boss_tools.wireless_energy_router": "무선 에너지 라우터",
-  "block.boss_tools.block_of_desh": "데쉬 블록",
-  "block.boss_tools.mars_iron_ore": "화성 철 광석",
-  "advancements.rocket_advancement.title": "1 티어 로켓",
-  "block.boss_tools.coal_torch": "석탄 횃불",
-  "block.boss_tools.nasa_workbench": "§dNASA 작업대",
-  "advancements.moon_advancement.title": "달",
   "item.boss_tools.space_pants": "우주복 하의",
-  "block.boss_tools.mars_stone": "화성 돌",
   "item.boss_tools.tier_1_rocket": "§b1 티어 로켓",
-  "advancements.rocket_tier_3_advancement.title": "3 티어 로켓",
-  "block.boss_tools.venus_stone": "금성 돌",
-  "block.boss_tools.infernal_spire": "Infernal Spire",
-  "block.boss_tools.flag_brown": "갈색 깃발",
-  "key.boss_tools.rocket_start": "로켓 발사",
-  "biome.boss_tools.orbit_mars_biome": "궤도",
   "item.boss_tools.diamond_engine": "다이아몬드 엔진",
-  "block.boss_tools.moon_brick_stairs": "달 벽돌 계단",
   "item.boss_tools.space_suit": "우주복 상의",
-  "block.boss_tools.flag_green": "초록색 깃발",
-  "block.boss_tools.flag_yellow": "노란색 깃발",
-  "block.boss_tools.flag_magenta": "자홍색 깃발",
-  "block.boss_tools.flag": "깃발",
   "item.boss_tools.alien_zombie_spawn_egg": "외계인 좀비 생성 알",
-  "biome.boss_tools.orbit_overworld_biome": "궤도",
   "item.boss_tools.barrel_of_fuel": "연료 통",
-  "block.boss_tools.moon_glowstone_ore": "달 발광석",
-  "block.boss_tools.moon_bricks": "달 벽돌",
-  "block.boss_tools.oxygen_loader": "산소 충전기",
-  "biome.boss_tools.mercury_biome": "수성",
-  "block.boss_tools.venus_sand": "금성 모래",
-  "block.boss_tools.mars_diamond_ore": "화성 다이아몬드 광석",
-  "block.boss_tools.fuel_refinery": "연료 정제기",
-  "block.boss_tools.block_of_rusted_iron_plating": "녹슨 철 블록",
   "item.boss_tools.netherite_space_suit": "네더라이트 우주복 상의",
-  "block.boss_tools.cracked_moon_bricks": "금 간 달 벽돌",
-  "biome.boss_tools.mars_biome": "화성",
   "item.boss_tools.silicon_ingot": "실리콘 주괴",
-  "advancements.moon_advancement.descr": "§b달에 진입하세요",
-  "itemGroup.tab_basics": "Space-Bosstools: 기본",
-  "block.boss_tools.venus_diamond_ore": "금성 다이아몬드 광석",
-  "key.boss_tools.rocket_key_rotation_a": "로켓 회전 키 : A",
-  "item.boss_tools.orbit_mars": "Admin Feuerzeug",
   "item.boss_tools.barrel": "통",
-  "key.boss_tools.rocket_key_rotation_d": "로켓 회전 키 : D",
-  "block.boss_tools.moon_stone": "달 돌",
-  "item.boss_tools.mercury": "Admin Feuerzeug",
   "item.boss_tools.golden_tank": "금 탱크",
   "item.boss_tools.nose_cone": "원뿔형 탄두",
   "item.boss_tools.compressed_steel": "압축 강철",
   "item.boss_tools.steel_ingot": "강철 주괴",
-  "entity.boss_tools.alien_zombie": "외계인 좀비",
   "item.boss_tools.wheel": "바퀴",
   "item.boss_tools.iron_tank": "철 탱크",
-  "block.boss_tools.moon_sand": "달 모래",
-  "item.boss_tools.pygro_spawn_egg": "Pygro  생성 알",
+  "item.boss_tools.pygro_spawn_egg": "Pygro 생성 알",
   "item.boss_tools.iron_stick": "철 막대기",
-  "block.boss_tools.mars_ice_shard_ore": "화성 얼음 조각 광석",
-  "block.boss_tools.mercury_cobblestone": "수성 조약돌",
-  "biome.boss_tools.orbit_moon_biome": "궤도",
-  "item.boss_tools.orbit_moon": "Admin Feuerzeug",
-  "item.boss_tools.orbit_mercury": "Admin Feuerzeug",
-  "biome.boss_tools.orbit_mercury_biome": "궤도",
-  "item.boss_tools.steel_sword": "강철 검",
-  "biome.boss_tools.venus_hills_biome": "금성",
   "item.boss_tools.oxygen_gear": "산소 장치",
   "item.boss_tools.oxygen_mask": "산소 마스크",
+  "item.boss_tools.steel_sword": "강철 검",
+  "item.boss_tools.tier_2_rocket": "§b2 티어 로켓",
+  "item.boss_tools.engine_fan": "엔진 팬",
+  "item.boss_tools.tier_3_rocket": "§b3 티어 로켓",
+  "item.boss_tools.netherite_oxygen_mask": "네더라이트 산소 마스크",
+  "item.boss_tools.space_boots": "우주복 부츠",
+  "item.boss_tools.rocket_fin": "로켓 분사구",
+  "item.boss_tools.rover": "§b로버",
+  "item.boss_tools.alien_spawn_egg": "외계인 생성 알",
+  "item.boss_tools.chesse": "치즈",
+  "item.boss_tools.steel_axe": "강철 도끼",
+  "item.boss_tools.mogler_spawn_egg": "Mogler 생성 알",
+  "item.boss_tools.desh_ingot": "데쉬 주괴",
+  "item.boss_tools.compressed_desh": "압축 데쉬",
+
+  "itemGroup.tab_normal": "Space-BossTools",
+  "itemGroup.tab_flags": "Space-Bosstools: 깃발",
+  "itemGroup.tab_blocks": "Space-Bosstools: 블록",
+  "itemGroup.tab_basics": "Space-Bosstools: 기본",
+  "itemGroup.tab_machines": "Space-Bosstools: 기계",
+  "itemGroup.tab_spawn_eggs": "Space-Bosstools: 생성 알",
+  "itemGroup.tab_materials": "Space-Bosstools: 재료",
+
+  "block.boss_tools.oxygen_bullet_generator": "산소 탄 생성기",
+  "block.boss_tools.block_of_blue_iron_plating": "청금 철 판 블록",
+  "block.boss_tools.mercury_iron_ore": "수성 철 광석",
+  "block.boss_tools.fuel": "연료",
+  "block.boss_tools.block_of_rusted_iron_pillar": "녹슨 철 기둥",
+  "block.boss_tools.mars_silicon_ore": "화성 실리콘 광석",
+  "block.boss_tools.moon_brick_slab": "달 벽돌 반 블록",
+  "block.boss_tools.cracked_moon_brick_stairs": "금 간 달 벽돌 계단",
+  "block.boss_tools.flag_cyan": "청록색 깃발",
+  "block.boss_tools.flag_light_blue": "하늘색 깃발",
+  "block.boss_tools.flag_red": "빨간색 깃발",
+  "block.boss_tools.block_of_iron_plating": "철 판 블록",
+  "block.boss_tools.cracked_moon_brick_slab": "금 간 달 벽돌 반 블록",
+  "block.boss_tools.rocket_launch_pad": "로켓 발사대",
+  "block.boss_tools.coal_generator": "석탄 발전기",
+  "block.boss_tools.block_of_desh": "데쉬 블록",
+  "block.boss_tools.mars_iron_ore": "화성 철 광석",
+  "block.boss_tools.coal_torch": "석탄 횃불",
+  "block.boss_tools.nasa_workbench": "§dNASA 작업대",
+  "block.boss_tools.mars_stone": "화성 돌",
+  "block.boss_tools.venus_stone": "금성 돌",
+  "block.boss_tools.infernal_spire": "Infernal Spire",
+  "block.boss_tools.flag_brown": "갈색 깃발",
+  "block.boss_tools.moon_brick_stairs": "달 벽돌 계단",
+  "block.boss_tools.flag_green": "초록색 깃발",
+  "block.boss_tools.flag_yellow": "노란색 깃발",
+  "block.boss_tools.flag_magenta": "자홍색 깃발",
+  "block.boss_tools.flag": "깃발",
+  "block.boss_tools.moon_glowstone_ore": "달 발광석",
+  "block.boss_tools.moon_bricks": "달 벽돌",
+  "block.boss_tools.oxygen_loader": "산소 충전기",
+  "block.boss_tools.venus_sand": "금성 모래",
+  "block.boss_tools.mars_diamond_ore": "화성 다이아몬드 광석",
+  "block.boss_tools.fuel_refinery": "연료 정제기",
+  "block.boss_tools.block_of_rusted_iron_plating": "녹슨 철 블록",
+  "block.boss_tools.cracked_moon_bricks": "금 간 달 벽돌",
+  "block.boss_tools.venus_diamond_ore": "금성 다이아몬드 광석",
+  "block.boss_tools.moon_stone": "달 돌",
+  "block.boss_tools.moon_sand": "달 모래",
+  "block.boss_tools.mars_ice_shard_ore": "화성 얼음 광석",
+  "block.boss_tools.mercury_cobblestone": "수성 조약돌",
   "block.boss_tools.sky_stone": "Sky Stone",
-  "advancements.workbench_advancement.descr": "§bNASA 작업대를 제작하세요",
-  "biome.boss_tools.moon_biome": "달",
   "block.boss_tools.flag_gray": "회색 깃발",
   "block.boss_tools.wall_coal_torch": "석탄 횃불",
-  "item.boss_tools.alien_bee": "외계 꿀벌 생성 알",
   "block.boss_tools.flag_blue": "파란색 깃발",
-  "item.boss_tools.tier_2_rocket": "§b2 티어 로켓",
-  "death.attack.venus.acid": "%1$은(는) 대량의 산성에 희생되었다",
-  "advancements.rocket_tier_3_advancement.descr": "§b3 티어 로켓을 제작하세요",
   "block.boss_tools.venus_sandstone": "금성 사암",
-  "item.boss_tools.rocket_spawn_egg": "로켓 생성 알",
-  "item.boss_tools.engine_fan": "엔진 팬",
-  "item.boss_tools.alien_spit_entity": "외계인 침 테스트",
   "block.boss_tools.flag_pink": "분홍색 깃발",
   "block.boss_tools.flag_purple": "보라색 깃발",
-  "itemGroup.tab_machines": "Space-Bosstools: 기계",
   "block.boss_tools.mercury_stone": "수성 돌",
-  "block.boss_tools.venus_gold_ore": "수성 금 광석",
-  "entity.boss_tools.star_crawler": "Star Crawler",
-  "item.boss_tools.rocket_tier_2_spawn_egg": "로켓 생성 알",
-  "entity.boss_tools.rocket": "로켓",
-  "biome.boss_tools.mercury_magma_biome": "수성",
+  "block.boss_tools.venus_gold_ore": "금성 금 광석",
   "block.boss_tools.solar_panel": "태양광 발전기",
-  "item.boss_tools.tier_3_rocket": "§b3 티어 로켓",
-  "entity.boss_tools.alien": "외계인",
   "block.boss_tools.iron_mark": "Iron Mark",
-  "item.boss_tools.netherite_oxygen_mask": "네더라이트 산소 마스크",
-  "job.boss_tools.job12": "가죽 세공인",
-  "job.boss_tools.job13": "석공",
-  "job.boss_tools.job10": "도구 대장장이",
-  "job.boss_tools.job11": "도살업자",
   "block.boss_tools.compressor": "압축기",
   "block.boss_tools.mars_sand": "화성 모래",
   "block.boss_tools.moon_iron_ore": "달 철 광석",
-  "item.boss_tools.space_boots": "우주복 부츠",
-  "item.boss_tools.rocket_fin": "로켓 분사구",
   "block.boss_tools.flag_orange": "주황색 깃발",
   "block.boss_tools.block_of_steel": "강철 블록",
-  "item.boss_tools.rover": "§b로버",
   "block.boss_tools.block_of_silicon": "실리콘 블록",
-  "item.boss_tools.alien_spawn_egg": "외계인 생성 알",
   "block.boss_tools.venus_coal_ore": "금성 석탄 광석",
-  "advancements.rocket_tier_2_advancement.descr": "§b2 티어 로켓을 제작하세요",
   "block.boss_tools.blast_furnace": "용광로",
-  "item.boss_tools.chesse": "치즈",
-  "item.boss_tools.steel_axe": "강철 도끼",
-  "itemGroup.tab_spawn_eggs": "Space-Bosstools: 생성 알",
-  "item.boss_tools.landing_gear": "착륙 장치 생성 알",
-  "item.boss_tools.orbit_venus": "금성 궤도 포탈 점화기",
-  "entity.boss_tools.rocket_tier_3": "로켓",
-  "itemGroup.tab_materials": "Space-Bosstools: 재료",
-  "entity.boss_tools.rocket_tier_2": "로켓",
-  "block.boss_tools.moon_cheese_ore": "달 치즈 광석",
-  "item.boss_tools.mogler_spawn_egg": "Mogler 생성 알",
-  "biome.boss_tools.mars_ice_biome": "화성 얼음",
-  "subtitles.rocketfly": "",
-  "biome.boss_tools.orbit_venus_biome": "궤도",
-  "item.boss_tools.desh_ingot": "데쉬 주괴",
-  "item.boss_tools.compressed_desh": "압축 데쉬",
   "block.boss_tools.flag_lime": "연두색 깃발",
-  "item.boss_tools.rocket_tier_3_spawn_egg": "로켓 생성 알",
-  "block.boss_tools.moon_desh_ore": "달 데쉬 광석"
+  "block.boss_tools.moon_cheese_ore": "달 치즈 광석",
+  "block.boss_tools.moon_desh_ore": "달 데쉬 광석",
+
+  "fluid.boss_tools.fuel": "연료",
+  "fluid.fuel": "연료",
+
+  "entity.boss_tools.mogler": "Mogler",
+  "entity.boss_tools.pygro": "Pygro",
+  "entity.boss_tools.alien": "외계인",
+  "entity.boss_tools.alien_zombie": "외계인 좀비",
+  "entity.boss_tools.star_crawler": "Star Crawler",
+  "entity.boss_tools.rocket_t1": "1 티어 로켓",
+  "entity.boss_tools.rocket_t2": "2 티어 로켓",
+  "entity.boss_tools.rocket_t3": "3 티어 로켓",
+  "entity.boss_tools.rover": "로버",
+
+  "biome.boss_tools.orbit": "궤도",
+  "biome.boss_tools.infernal_venus_barrens_biome": "금성 지옥 불모지",
+  "biome.boss_tools.venus_biome": "금성",
+  "biome.boss_tools.mercury_biome": "수성",
+  "biome.boss_tools.mars_biome": "화성",
+  "biome.boss_tools.venus_hills_biome": "금성 언덕",
+  "biome.boss_tools.moon_biome": "달",
+  "biome.boss_tools.mercury_magma_biome": "수성 마그마",
+  "biome.boss_tools.mars_ice_biome": "화성 얼음",
+
+  "advancements.workbench_advancement.title": "NASA 작업대",
+  "advancements.rocket_tier_2_advancement.title": "2 티어 로켓",
+  "advancements.rocket_advancement.descr": "§b1 티어 로켓을 제작하세요",
+  "advancements.rocket_advancement.title": "1 티어 로켓",
+  "advancements.moon_advancement.title": "달",
+  "advancements.rocket_tier_3_advancement.title": "3 티어 로켓",
+  "advancements.rocket_tier_3_advancement.descr": "§b3 티어 로켓을 제작하세요",
+  "advancements.moon_advancement.descr": "§b달에 진입하세요",
+  "advancements.workbench_advancement.descr": "§bNASA 작업대를 제작하세요",
+  "advancements.rocket_tier_2_advancement.descr": "§b2 티어 로켓을 제작하세요",
+
+  "key.categories.boss_tools": "Space-Bosstools",
+  "key.boss_tools.rocket_start": "로켓 발사",
+
+  "death.attack.oxygen": "%1$s은(는) 더 이상 숨 쉴 수 없다",
+  "death.attack.venus.acid": "%1$s은(는) 대량의 산성에 희생되었다",
+
+  "job.boss_tools.job1": "농부",
+  "job.boss_tools.job2": "어부",
+  "job.boss_tools.job3": "양치기",
+  "job.boss_tools.job4": "화살 제조인",
+  "job.boss_tools.job5": "사서",
+  "job.boss_tools.job6": "지도 제작자",
+  "job.boss_tools.job7": "성직자",
+  "job.boss_tools.job8": "갑옷 제조인",
+  "job.boss_tools.job9": "무기 대장장이",
+  "job.boss_tools.job10": "도구 대장장이",
+  "job.boss_tools.job11": "도살업자",
+  "job.boss_tools.job12": "가죽 세공인",
+  "job.boss_tools.job13": "석공"
 }
